--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adam Olszewski",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "node-sass": "^9.0.0",
