--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "Adam Olszewski",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "node-sass": "^9.0.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
