--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cache-control": "^2.0.0",
     "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
