--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "handlebars": "^4.7.8",
     "node-sass": "^9.0.0",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.1",
-    "puppeteer": "^21.5.1"
+    "nodemon": "^3.0.1"
   }
 }
